# textio

./: .gitignore  .project  .travis.yml  CMakeLists.txt  README.md  ignorelist.txt
CMakeModules/: FindTEXTIO.cmake
include/: ReadTextFile.h
src/: CMakeLists.txt  ReadTextFile.cpp  ReadTextFile.h  textio.hpp  version.h  version.h.in
